# Learn-LLVM17

./: .gitignore
IR_Examples/: contract.cpp  example_array1.c  example_array1.ll  example_array2.c  example_array2.ll  example_lambda.cpp  example_lambda.ll  example_ptr1.cpp  example_ptr1.ll  example_ref1.cpp  example_ref1.ll  example_string  example_string.cpp  example_string.ll  example_string_modified  example_string_modified.ll  example_throw.cpp  example_throw.ll  example_vector.cpp  example_vector.ll  gcd.c  gcd.ll  gcd_O3.ll  gcd_no_opt.ll  test.ll
IR_Examples/infinite_loop/: test_infinite_loop.cpp  test_infinite_loop2  test_infinite_loop2.bc  test_infinite_loop2.ll  test_infinite_loop2.s
IR_Examples/test_template/: main.cpp  main.ll  test.h
calc/: CMakeLists.txt  example  example.ll  rtcalc.ll
calc/src/: AST.h  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Sema.cpp  Sema.h
chapter8/calc/: CMakeLists.txt  expr  rtcalc.cpp
chapter8/calc/src/: AST.h  Calc.cpp  CodeGen.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Sema.cpp
chapter8/tinylang/: Gcd_global_read.ll
countirpass/: CMakeLists.txt
countirpass/include/: CountIR.h
countirpass/lib/: CountIR.cpp
countirpasslegacy/include/: CountIR.h
countirpasslegacy/lib/: CMakeLists.txt  CountIR.cpp
countirpasslegacy/test/: test.ll
tinylang/: CMakeLists.txt  Gcd.s
tinylang/cmake/modules/: AddTinylang.cmake
tinylang/lib/Basic/: CMakeLists.txt  TokenKinds.cpp
tinylang/lib/CodeGen/: CGDebugInfo.cpp  CGProcedure.cpp  CGTBAA.cpp
tinylang/tools/driver/: CMakeLists.txt
(+30 files in other folders)
